--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   </body>
     <a href="slide.html">want to see my slider😊 gotcha!</a>
     <div class="header">
-      <h1 class="title">devfinder</h1>
+      <h1 class="titleOfH1">devfinder</h1>
       <div class="theme-panel">
-        <h3 class="theme-text">dark</h3>
+        <h3 class="text-of-theme-text">dark</h3>
         <svg
           id="moon"
           width="20"
